--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <title>Plolj</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/browse/normalize.css@8.0.1/normalize.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"
+    />
   </head>
   <body>
     <div id="app"></div>
