First bottle drafts

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,20 @@
           opacity: 0;
         }
       }
+      .playfair {
+        font-family: 'Playfair Display', serif;
+      }
+      .crimson {
+        font-family: 'Crimson Pro', serif;
+      }
     </style>
     <link
       rel="stylesheet"
       href="https://unpkg.com/browse/normalize.css@8.0.1/normalize.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Crimson+Pro:300,400,600|Playfair+Display:300,400,600&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
