Update bottle tags

--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,16 @@
       .crimson {
         font-family: 'Crimson Pro', serif;
       }
+      .festive {
+        font-family: 'Festive', serif;
+      }
     </style>
     <link
       rel="stylesheet"
       href="https://unpkg.com/browse/normalize.css@8.0.1/normalize.css"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Crimson+Pro:300,400,600|Playfair+Display:300,400,600&display=swap"
+      href="https://fonts.googleapis.com/css?family=Crimson+Pro:300,400,600|Playfair+Display:300,400,600|Festive:400&display=swap"
       rel="stylesheet"
     />
     <link
